# yaduha

./: .env.template  .gitignore  CLAUDE.md  Dockerfile  README.md  Readme.md  TODO.md  app.py  app_api.py  app_base.py  bot.py  builder_bot.py  docker-compose.yml  generate_datasets.py  helpers.py  main.py  my_first_translation.py  nouns.json  plot_results.py  pyproject.toml  release.sh  requirements.txt  scratch.py  segment.py  sentence_builder.py  sentences.csv  translate.py  translate_agentic.py  translate_eng2ovp.py  translate_ovp2eng.py  translate_simple.py  translator.py  verbs.json
.github/workflows/: ci.yaml  ci.yml  publish.yml
app/: .pylintrc  Dockerfile  Readme.md  app.py  app_api.py  app_oauth.py  deploy.sh  requirements.txt
app/deployment/: service.yaml
app/static/css/: style.css
app/static/js/: translator.js
app/templates/: builder.html  error.html  help_subject.html  help_verb.html  index.html
data/: random_good_translations.csv  sentences.csv
deployment/: service.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts  languages.ts  schemas.ts  translate.ts
frontend/src/pages/: ExamplesPage.tsx  HomePage.tsx  LanguagePage.tsx  TranslatePage.tsx
frontend/src/types/: api.ts
kubishi_sentences/: .gitignore  Dockerfile  README.md  requirements-dev.txt  requirements.txt  tox.ini
kubishi_sentences/kubishi_sentences/: plot_results.py  segment.py  semantic_models.py  sentence_builder.py  translate_eng2ovp.py  translate_ovp2eng.py  vocab_constants.py
kubishi_sentences/tests/: test-segment.py  test_segment.py
lessons/: app.py  lessons.py
lessons/lessons/: lesson_1.json  lesson_2.json  lesson_3.json  lesson_4.json  lesson_5.json  lesson_6.json  lesson_7.json
lessons/static/: index.html  script.js
my-lang/: __init__.py  vocab.py
results/: my-experiment.jsonl  test-1.1.jsonl  test-1.jsonl  test_agentic-1.1.jsonl
scripts/: build.py  create_language.py  evaluate_model_calls.py  evaluate_translators.py  evaluate_translators_analysis.py  example_agentic.py  example_back_translate.py  example_build_sentences.py  example_finetuned.py  example_instructions.py  example_pipeline.py  example_rag.py  example_search_grammar.py  example_segment.py  finetune_models.py  generate_datasets.py  main.py  messages-openai-complex-gpt-4o-mini.json  messages-openai-complex-gpt-4o.json  messages-openai-nominalization-gpt-4o.json  messages-openai-simple-gpt-4o-mini.json  messages-openai-simple-gpt-4o.json  messages.json  output-2.txt  output.txt  plot_results.py  results.json  scratch.py  test_agent.py  test_agentic_translator.py  test_compare_pipeline_translators.py  test_editor.py  test_logger.py  test_ollama_agent.py  test_pipeline_translator.py  test_user_lang.py
scripts/agentic/: messages-openai-complex-gpt-4o-mini.json  messages-openai-nominalization-gpt-4o-mini.json  messages-openai-nominalization-gpt-4o.json  messages-openai-simple-gpt-4o-mini.json  messages-openai-simple-gpt-4o.json  results.json
scripts/data/: evaluation_sentences.csv  finetune_dataset.jsonl  random_complex_translations.csv  random_good_translations copy.csv  random_good_translations.csv  random_no_nouns.csv  random_no_object_noun.csv  random_no_subject_noun.csv  random_no_verb.csv  random_no_vocab.csv  semantic_sentences.json  translations.csv  uncommon_nouns.csv  uncommon_verbs.csv
scripts/results/: average_cost_summary_table.tex  average_translation_time_summary_table.tex  baseline_similarity_summary_table.tex  bert_score_baseline.json  bleu_score_baseline.json  chrf_score_baseline.json  comet_score_baseline.json  evaluation_results.json  evaluation_results_copy_2.json  evaluation_results_evaluated.json  evaluation_results_processed.json  model_calls.csv
scripts/results.v1/: cost_summary_table.tex  evaluation_results copy.json  evaluation_results.json  median_translation_time_summary_table.tex  semantic_similarity_baseline.json
scripts/semantic/: main.py
src/: setup.py
src/yaduha/: agentic.py  back_translate.py  base.py  bert_score.py  common.py  examples.py  segment.py  semantic_similarity.py  sentence_builder.py  so-segment.py  translate_eng2ovp.py  translate_ovp2eng.py
src/yaduha/chatbot/: __init__.py
src/yaduha/evaluate/: bert_score.py  comet.py  rbo.py  semantic_similarity.py
src/yaduha/forward/: __init__.py  agentic.py  finetuned.py  instructions.py  pipeline.py  rag_translator.py
src/yaduha/schemas/: simple_sentence_schema.json
static/css/: style.css
static/js/: builder.js  script.js  tour.js  translator.js
templates/: builder.html  content.html  help_object.html  index.html  translator.html
tests/: __init__.py  conftest.py  test_agentic_translator.py  test_agents.py  test_api.py  test_cli.py  test_editor.py  test_evaluator.py  test_evaluator_metrics.py  test_experiments.py  test_instructions_back_translator.py  test_instructions_translator.py  test_language.py  test_language_loader.py  test_loader.py  test_logger.py  test_mcp_server.py  test_pipeline_integration.py  test_pipeline_translator.py  test_pipeline_translator_from_language.py  test_tool.py
yaduha/: __init__.py  cli.py  loader.py
yaduha/agent/: __init__.py  anthropic.py  claude.py  gemini.py  ollama.py  openai.py
yaduha/api/: __init__.py  app.py  dependencies.py  models.py
yaduha/dashboard/: app.py
yaduha/editor/: __init__.py  editor.py  examples.py  grammar.py  validation.py  vocabulary.py
yaduha/evaluator/: __init__.py  bertscore.py  bleu.py  chrf.py  comet.py
yaduha/experiment/: __init__.py
yaduha/experiments/: __init__.py
yaduha/language/: __init__.py  exceptions.py  git_loader.py  language.py  loader.py
yaduha/logger/: __init__.py
yaduha/mcp_server/: __init__.py  http_server.py  server.py
yaduha/results/: my-experiment1.jsonl
yaduha/tool/: __init__.py  english_to_sentences.py  openapi.py  sentence_to_english.py
yaduha/translator/: __init__.py  agentic.py  back_translator.py  instructions.py  instructions_back.py  pipeline.py
yaduha_ovp/: __init__.py  prompts.py  pyproject.toml  vocab.py
(+48 files in other folders)
