[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yaduha"
version = "0.3"
description = "A type-safe, AI-powered framework for structured language translation"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.md"}
authors = [
    {name = "Jared Coleman", email = "jared.coleman@lmu.edu"},
    {name = "Diego Cuadros"},
    {name = "Nicholas Leeds"},
    {name = "Bhaskar Krishnamachari"},
    {name = "Kira Toal"},
    {name = "Ruben Rosales"},
    {name = "Khalil Iskarous"},
]
keywords = ["translation", "llm", "endangered-languages", "language-learning", "machine-translation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "pydantic",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
api = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "requests",
]
agents = [
    "anthropic",
    "openai",
]
all = [
    "yaduha[api,agents]",
    "graphviz>=0.20",
    "pandas",
    "tabulate",
    "weave",
]
dev = [
    "pytest>=7.0",
    "black",
    "isort",
    "mypy",
]

[project.scripts]
yaduha = "yaduha.cli:main"

[project.urls]
Homepage = "https://github.com/kubishi/yaduha-2"
Documentation = "https://github.com/kubishi/yaduha-2/tree/main/docs"
Repository = "https://github.com/kubishi/yaduha-2"
"Bug Tracker" = "https://github.com/kubishi/yaduha-2/issues"

[tool.setuptools]
packages = [
    "yaduha",
    "yaduha.language",
    "yaduha.agent",
    "yaduha.translator",
    "yaduha.logger",
    "yaduha.tool",
    "yaduha.api",
    "yaduha.api.routes",
]

[tool.setuptools.package-data]
yaduha = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
