[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yaduha"
version = "0.3.4"
description = "A type-safe, AI-powered framework for structured language translation"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.md"}
authors = [
    {name = "Jared Coleman", email = "jared.coleman@lmu.edu"},
    {name = "Diego Cuadros"},
    {name = "Nicholas Leeds"},
    {name = "Bhaskar Krishnamachari"},
    {name = "Kira Toal"},
    {name = "Ruben Rosales"},
    {name = "Khalil Iskarous"},
]
keywords = ["translation", "llm", "endangered-languages", "language-learning", "machine-translation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "pydantic",
    "python-dotenv>=1.2.1",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
full = [
    "fastapi[standard]",
    "python-dotenv",
    "requests",
    "anthropic",
    "openai",
    "httpx",
    "sacrebleu>=2.0",
    "bert-score>=0.3",
    "unbabel-comet>=2.0",
]
dev = [
    "yaduha[full]",
    "pytest>=7.0",
    "mypy",
    "ruff",
    "pyright",
]

[project.scripts]
yaduha = "yaduha.cli:main"

[project.urls]
Homepage = "https://github.com/kubishi/yaduha"
Documentation = "https://github.com/kubishi/yaduha/tree/main/docs"
Repository = "https://github.com/kubishi/yaduha"
"Bug Tracker" = "https://github.com/kubishi/yaduha/issues"

[tool.setuptools]
packages = [
    "yaduha",
    "yaduha.language",
    "yaduha.agent",
    "yaduha.translator",
    "yaduha.logger",
    "yaduha.tool",
    "yaduha.evaluator",
    "yaduha.api",
    "yaduha.api.routes",
]

[tool.setuptools.package-data]
yaduha = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]  # line length handled by ruff format

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingImports = "warning"
exclude = ["yaduha/evaluator/bertscore.py", "yaduha/evaluator/comet.py"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "yaduha.agent.*",
    "yaduha.api.*",
    "yaduha.tool.*",
]
ignore_errors = true
